force-app/main/default/objects/Endorsement_Request__c/Endorsement_Request__c.object-meta.xml
<CustomObject>
    <label>Endorsement Request</label>
    <nameField>
        <displayFormat>ER# {DD}{MM}{YYYY}-{0000}</displayFormat>
        <label>Endorsement Re Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Endorsement Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>