force-app/main/default/objects/Endorsement_Request__c/fields/Endorsement_Type__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Type__c</fullName>
    <label>Endorsement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loss Payee</fullName>
            </value>
            <value>
                <fullName>Lien Holder</fullName>
            </value>
            <value>
                <fullName>Additional Insured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>