force-app/main/default/objects/Endorsement_Request__c/fields/Other_Request__c.field-meta.xml
<CustomField>
    <fullName>Other_Request__c</fullName>
    <label>Other Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>