force-app/main/default/objects/Endorsement_Request__c/fields/Process_Owner__c.field-meta.xml
<CustomField>
    <fullName>Process_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Endorsement Requests</relationshipLabel>
    <relationshipName>Endorsement_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>