force-app/main/default/objects/Endorsement_Request__c/fields/Process_Owner_p__c.field-meta.xml
<CustomField>
    <fullName>Process_Owner_p__c</fullName>
    <label>Process Owner</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Team</fullName>
            </value>
            <value>
                <fullName>Loyalty Team</fullName>
            </value>
            <value>
                <fullName>Endorsements Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>